test/bad/generics/def03.px

func f<Num T>(T x) T def
    return T
